--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,13 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- ads -->
+    <script 
+    data-ad-client="ca-pub-4822263326291295" async 
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- end ads -->
 </head>
   <body class="mat-typography">
     <app-root></app-root>
